# task-management

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  sendingEmail.cpp  sendingEmail.h
Companies/header/: Company.h  CompanyManager.h
Companies/src/: Company.cpp  CompanyManager.cpp
CustomException/core/: LoginException.h  dbException.h  dbExceptionHandler.cpp  dbExceptionHandler.h
Invites/headers/: Invite.h  InviteManager.h
Invites/src/: Invite.cpp  InviteManager.cpp
ItemContainer/header/: ItemContainer.h
ItemContainer/src/: ItemContainer.cpp
ItemsIterator/header/: ItemsIterator.h
ItemsIterator/src/: ItemsIterator.cpp
Task/TaskWindow/: taskwindow.cpp  taskwindow.h  taskwindow.ui
Task/header/: Task.h  TaskManager.h
Task/src/: TaskManager.cpp
UsersContainer/header/: UserContainer.h
UsersContainer/src/: UserContainer.cpp
UsersIterator/header/: UsersIterator.h
UsersIterator/src/: UsersIterator.cpp
UsersWindows/AdminWindowCore/: adminclass.cpp  adminclass.h  adminclass.ui
UsersWindows/BasicClassCore/: basicclass.cpp  basicclass.h  basicclass.ui
UsersWindows/ChangeInfoWindow/: changeinfowindow.cpp  changeinfowindow.h  changeinfowindow.ui
UsersWindows/EmployeeWindow/: employeewindow.cpp  employeewindow.h  employeewindow.ui
UsersWindows/EmployeeWindow/ToDoListWindow/: todolist.ui  todowindow.cpp  todowindow.h  todowindow.ui
UsersWindows/HandleWindow/HandleCompanyInfoCore/: handlecompanyinfo.cpp  handlecompanyinfo.h  handlecompanyinfo.ui
UsersWindows/HandleWindow/HandleUserInfo/: handleinfoclass.cpp  handleinfoclass.h  handleinfoclass.ui
UsersWindows/headers/: userwindow.h
UsersWindows/src/: userwindow.cpp
UsersWindows/ui/: userwindow.ui
UsersWindows/userWindowCore/: userwindow.cpp  userwindow.h  userwindow.ui
XmlHandler/header/: XmlHandler.h
XmlHandler/src/: XmlHandler.cpp
header/: EmailSender.h  Person.h  Session.h  User.h  UserManager.h  sendingEmail.h
menu/headers/: companyregwindow.h  mainwindow.h  registrationwindow.h
menu/src/: companyregwindow.cpp  companyregwindow.ui  mainwindow.cpp  mainwindow.ui  registrationwindow.cpp  registrationwindow.ui
menu/ui/: mainwindow.ui
resources/: resources.qrc
src/: Accountable.h  Session.cpp  User.cpp  UserManager.cpp  emailSender.h  main.cpp  sendingEmail.cpp  sendingEmail.h  user.h  userManager.h
src/headers/: EmailSender.h  User.h  UserManager.h  emailSender.h  sendingEmail.h  userManager.h
